--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,18 @@ footer nav ul{
 footer nav ul li  {
     padding: 10px;
 }
+
+main.admin tbody td:nth-child(5){
+    width: 280px;
+}
+
+.banner img{
+    margin: 0 auto;
+    height: 750px;
+    width: 80%;
+}
+
+.carousel-control-next, .carousel-control-prev{
+    background-color: #C2185B;
+    width: 10%;
+}
